--- a/my_app/src/app/global.css
+++ b/my_app/src/app/global.css
@@ -81,7 +81,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans), sans-serif;
   touch-action: manipulation;
   --webkit-font-smoothing: antialiased;
   --moz-osx-font-smoothing: grayscale;
